# SDL2AndroidMinimal

./: README.md  local.properties
app/: build.gradle
app/jni/: Application.mk  README.md
app/jni/src/: Android.mk  CMakeLists.txt  README.md  main.cpp
app/src/main/: AndroidManifest.xml
